--- a/R/modulo1_tema4_R_Ejercicios.Rmd
+++ b/R/modulo1_tema4_R_Ejercicios.Rmd
@@ -20,7 +20,7 @@ options(knitr.kable.NA = '')
 
 # EJERCICIO 1
 
-Para el ejercicio 1, utilizaremos los datos los datos `millas` que hay el el package `datos`. Estos datos consisten en 238 y 11 variables que describen el consumo de combustible de 38 modelos de coche populares.
+Para el ejercicio 1, utilizaremos los datos `millas` que hay en el package `datos`. Estos datos consisten en 238 y 11 variables que describen el consumo de combustible de 38 modelos de coche populares.
 
 Puedes consultar más sobre los datos en la ayuda: `?millas`.
 
@@ -49,7 +49,7 @@ A partir del gráfico del ejercicio 1.1., escoge una variable para cada unos de 
 
 > Truco: Observa que puedes seleccionar tanto variables continuas como categóricas. Si lo crees interesante, puedes repetir.
 
-Comenta algun aspecto relevante que hayas descubierto sobre los coches a partir del gráfico.
+Comenta algún aspecto relevante que hayas descubierto sobre los coches a partir del gráfico.
 
 ```{r}
 # Solución:
@@ -58,7 +58,7 @@ Comenta algun aspecto relevante que hayas descubierto sobre los coches a partir 
 
 ## EJERCICIO 1.3.
 
-Transforma el siguiente vector de tipo `factor` a tipo `numeric` de forma que el valor final mostrado sea exactamente el mismo en ambos vectores pero con formato distinto. Para ello utiliza `as.character()` y `as.numeric()`. 
+Transforma el siguiente vector de tipo `factor` a tipo `numeric` de forma que el valor final mostrado sea exactamente el mismo en ambos vectores, pero con formato distinto. Para ello utiliza `as.character()` y `as.numeric()`. 
 
 ¿Que sucede si sólo utilizas `as.numeric()`?
 
@@ -73,18 +73,20 @@ print(vec) # valor mostrado
 
 ## EJERCICIO 1.4.
 
-Es millas un objeto de la clase *data.frame* o *matrix*?
+¿Es millas un objeto de la clase *data.frame* o *matrix*?
 
 ¿Y el siguiente objeto `obj`?
 
 ```{r}
+obj <- cbind(millas$cilindrada,millas$cilindros)
+
 # solución
 
 ```
 
 ## EJERCICIO 1.5.
 
-Crea una función que tome un vector como input y retorne un lista con los siguientes resultados:
+Crea una función que tome un vector como input y retorne una lista con los siguientes resultados:
 
 1. El último valor del vector
 1. Los elementos de las posiciones impares.
@@ -118,14 +120,16 @@ Añade a millas una nueva columna llamada "fabr_mod" que contenga la concatenaci
 
 ## EJERCICIO 1.8.
 
-Selecciona todos los coches de `millas` que cumplan con todas todas las condiciones siguientes:
+Selecciona todos los coches de `millas` que cumplan con todas las condiciones siguientes:
 
 - La marca es distinta a "dodge"
 - Tiene tracción en las cuatro puertas
 - Han estado fabricados antes del 2008
 - Las millas/galón en ciudad o en carretera no llega a 12 millas/galón.
 
-Cuantos coches has encontrado?
+<br>
+
+¿Cuantos coches has encontrado?
 
 ```{r}
 # Solución:
@@ -184,7 +188,7 @@ Explica la diferencia entre la función `if()` e `ifelse()`. Pon un ejemplo de u
 
 ## EJERCICIO 2.4.
 
-¿Qué parámetros es imprescindible especificar cuando se leen datos de ancho fijo mediante: `read.fwf()`?
+¿Qué parámetros son necesarios para especificar la lectura de datos de ancho fijo mediante: `read.fwf()`?
 
 Explica qué significan y pon un ejemplo.
 
@@ -207,7 +211,7 @@ Calcula la media de millas/galón en autopista para cada `clase` de coche de `mi
 
 Incorpora la media de calculada en 2.5. en el data frame `millas` como una nueva variable llamada "autopista_clase". 
 
-> Utiliza la funcion `merge()` para juntar la table de 2.5 con `millas`.
+> Utiliza la función `merge()` para juntar la table de 2.5 con `millas`.
 
 ```{r}
 # Solución:
@@ -216,9 +220,7 @@ Incorpora la media de calculada en 2.5. en el data frame `millas` como una nueva
 
 ## EJERCICIO 2.7.
 
-Utiliza las funciones del package dplyr: `group_by()` y `mutate()` para realizar el mismo calculo que en 2.5. y 2.6. sin necesidad de utilizar `merge()`. Llama a la nueva columna "autopista_clase_dplyr"
-
-> Truco: Utiliza el siguiente ejemplo: `datos %>% group_by(var_seg) %>% mutate(nueva_variable=mean(variable))`
+Utiliza las funciones del package dplyr: `group_by()` y `mutate()` para realizar el mismo cálculo que en 2.5. y 2.6. sin necesidad de utilizar `merge()`. Llama a la nueva columna "autopista_clase_dplyr"
 
 Haz un `summary()` para verificar que el resultado es el mismo que en 2.6.
 
@@ -247,7 +249,7 @@ Crea una función que tenga como input la fecha de tu nacimiento (en formato dat
 
 ## EJERCICIO 2.10.
 
-Explica porqué el resultado de fechahora_1 y fechahora_2 son distintos en la siguiente expresión:
+Explica por qué el resultado de fechahora_1 y fechahora_2 son distintos en la siguiente expresión:
 
 ```{r, warning=FALSE, message=FALSE}
 library(lubridate)
