--- a/R/modulo1_tema4_R.Rmd
+++ b/R/modulo1_tema4_R.Rmd
@@ -15,7 +15,7 @@ subtitle: 'Tema: Herramientas de análisis: Programación en R'
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, fig.path="www/")
 library(knitr)
 library(pander)
 library(kableExtra)
@@ -39,7 +39,7 @@ options(knitr.kable.NA = '')
 - Realizar operaciones de lectura y escritura de datos con R.
 - Saber escoger la estructura de datos de R adecuada para cada problema.
 - Tener las bases para realizar análisis descriptivo mediante tablas y gráficos en R.
-- Desarrollar pequeñas piezas de código en R
+- Desarrollar pequeñas piezas de código en R.
 
 <br>
 
@@ -59,7 +59,7 @@ El *Data science* permite transformar datos en conocimiento. El objetivo es apre
 
 <br>
 
-La actividad guiada, que resolveremos a lo largo de este temario consiste en comprender la evolución de la riqueza y la esperanza de vida de las personas a nivel de país y continente.
+Consiste en comprender la evolución de la riqueza y la esperanza de vida de las personas a nivel de país y continente.
 
 Para ello, contamos con los datos de [países](https://www.rdocumentation.org/packages/datos/versions/0.3.0/topics/paises) coleccionados por [Gapminder](https://www.gapminder.org/) y traducidos al Castellano en el package [datos](https://cran.r-project.org/web/packages/datos/index.html).  
 
@@ -83,7 +83,9 @@ kable(paises07%>%head(10), "html", booktabs=TRUE) %>%
   save_kable("www/pasies07.png")
 ```
 
-![Fuente: http://www.gapminder.org/data/](www/pasies07.png){width=400px}
+\<imagen1\>Fuente: http://www.gapminder.org/data/ (www/pasies07.png){width=400px}
+
+<br>
 
 Los datos muestran la esperanza de vida media en 142 países, población total y su nivel de riqueza medido con el [Producto Interior Bruto (PIB)](https://es.wikipedia.org/wiki/Producto_interno_bruto) per cápita.
 
