--- a/R/modulo1_tema4_R_01_elem_bas.Rmd
+++ b/R/modulo1_tema4_R_01_elem_bas.Rmd
@@ -1,5 +1,5 @@
 ```{r include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, fig.path="www/")
 library(knitr)
 library(pander)
 library(kableExtra)
@@ -21,7 +21,7 @@ options(knitr.kable.NA = '')
 
 <br>
 
-Aunque se presuponen unos conocimientos iniciales de R, a continuación se hace un repaso de R y RStudio.
+Aunque se presuponen unos conocimientos iniciales de programación, a continuación se hace un repaso de R y RStudio.
 
 <br>
 
@@ -51,8 +51,7 @@ El lenguaje R se puede escribir mediante editor de texto en ficheros con extensi
 
 <br>
 
-####### ![](www/rstudio.png){width=450px}
-######## Imagen: Entorno RStudio (Fuente: Elaboración propia).
+\<imagen1\>Imagen 1: Entorno RStudio (Fuente: Elaboración propia). (www/rstudio.png){width=450px}
 
 ##### RSTUDIO Y DOCUMENTOS RMARKDOWN (*.Rmd)
 
@@ -74,8 +73,7 @@ Genera tu primer documento RMarkdown. En RStudio, accede al menú `File > New Fi
 
 <br>
 
-####### ![](www/rmarkdown1.png){width=200px}
-######## Imagen: Menú de nuevo RMarkdown (Fuente: Elaboración propia).
+\<imagen1\>Imagen 2: Menú de nuevo RMarkdown (Fuente: Elaboración propia). (www/rmarkdown1.png){width=200px}
 
 <br>
 
@@ -130,7 +128,7 @@ ls()
 
 <br>
 
-> \<piensa un minuto\>¿Por qué `cars` y `pressure` no aparecen en el environment? El motivo es porque no están en el environment global, están dentro de la librería (o package) `datasets`.\</ piensa un minuto\>
+> \<piensa un minuto\>¿Por qué `cars` y `pressure` no aparecen en el environment?\</ piensa un minuto\>
 
 <br>
 
@@ -144,7 +142,7 @@ Los objetos R, se pueden guardar en ficheros .RData con `save()`.
 
 ```{r}
 save(a, b, file="www/ejemploSave.RData")
-# save.image(file="www/ejemploSave.RData")   # guarda todos lo objetos en memoria
+# save.image(file="www/ejemploSave.RData")   # guarda todos los objetos en memoria
 ```
 
 <br>
@@ -212,7 +210,7 @@ Llama la función seguido de paréntesis.
 
 <br>
 
-```{r, fig.width=3,fig.asp=4/5, fig.cap='Resultado función `describir`'}
+```{r plot1, fig.width=3,fig.asp=4/5, fig.cap='Resultado función `describir`. (plot1-1.png)'}
 describir()
 ```
 
@@ -280,7 +278,7 @@ Para llamar a la función:
 
 <br>
 
-```{r, fig.width=3,fig.asp=4/5, fig.cap='Describir con Parámetros explícitos'}
+```{r plot2, fig.width=3,fig.asp=4/5, fig.cap='Describir con parámetros explícitos. (plot2-1.png)'}
 describir(pressure, type='l', main = "Presión de vapor del mercurio"
   , xlab = "Temperatura (ºC)", ylab = "Presión (mm de Hg)", cex.main=1)
 ```
@@ -342,7 +340,7 @@ kable(resumen, "html", booktabs=TRUE,align="r") %>%
   save_kable("www/resumen.png")
 ```
 
-![](www/resumen.png){width=200px}
+\<imagen1\>(www/resumen.png){width=200px}
 
 <br>
 
