--- a/R/modulo1_tema4_R_04_contr_flujo.Rmd
+++ b/R/modulo1_tema4_R_04_contr_flujo.Rmd
@@ -31,7 +31,7 @@ Existen distintos mecanismos para controlar el flujo de un programa.
 
 Las funciones ayudan a automatizar piezas de nuestro código. 
 
-Para avanzar en el uso de R es importante entender un caso particular de funciones, las **funciones vectorizadas**. Éstas se aplican tantas veces como elementos tengamos en la entrada de la función. 
+Un caso particular de funciones son las **funciones vectorizadas**. Éstas se aplican tantas veces como elementos tengamos en la entrada de la función. 
 
 Veamos unos ejemplos simples.
 
@@ -71,7 +71,7 @@ En los siguientes puntos se presenta como vectorizar funciones sobre objetos R (
 
 <br>
 
-Una forma de modificar el flujo de un programa, es mediante el uso de expresiones `if-then-else`. Su forma más general sería la siguiente.
+Una forma de modificar el flujo de un programa, es mediante el uso de expresiones `if-then-else`.
 
 <br>
 
@@ -108,7 +108,7 @@ if (all(is.na(a))) {
 
 <br>
 
-La función `ifelse()` se puede utilizar sobre vectores y devuelve un vector.
+La función `ifelse()`, en cambio, sí que vectoriza.
 
 <br>
 
@@ -140,7 +140,7 @@ raiz
 <br>
 
 Si bien existen bucles de tipo `while()` y `repeat`, el más habitual es `for()`. 
-El siguiente ejemplo muestra como calcular el cuadrado de un vector de números con `for()`.
+Para calcular el cuadrado de un vector de números con `for()`.
 
 <br>
 
@@ -157,8 +157,8 @@ cuadrados
 
 <br>
 
-La columna `x` recorre los elementos del objeto `a`. El resultado se va acumulando en forma de vector en el objeto `cuadrados`. 
-Esta forma de acumular el resultado, es poco eficiente, ya que obliga a ir ampliando la memoria en cada iteración. La forma correcta es, primero reservar el espacio y posteriormente rellenar el objeto:
+`x` recorre los elementos del objeto `a` y acumula el resultado en `cuadrados`. 
+Esto, es poco eficiente, ya que obliga a ir ampliando la memoria en cada iteración. La forma correcta es, primero reservar el espacio y posteriormente rellenar el objeto:
 
 <br>
 
@@ -173,9 +173,9 @@ cuadrados
 
 <br>
 
-Observa como ahora el bucle recorre los índices de posiciones del objeto `a`, no directamente sus elementos, esto permite que se pueda utilizar el mismo índice para rellenar el objeto `cuadrados`.
+Ahora se recorren los indices, no los valores de `a`.
 
-En muchas ocasiones, se puede reemplazar el uso de un bucle mediante funciones de R vectorizadas. En este caso, la forma más simple de calcular los cuadrados de un vector es la siguiente.
+No obstante, en R, es más simple utilizar funciones vectorizadas.
 
 <br>
 
@@ -186,5 +186,5 @@ cuadrados
 
 <br>
 
-En el apartado de [RESUMENES DE AGREGADOS](#resumenes-de-agregados), se presenta las funciones de la familia `apply()`. Éstas representan una alternativa a los bucles for(), para aplicar una misma función de resumen (vectorizar) sobre agrupaciones de objetos de entrada (filas de una matriz, columnas de un data frame...).
+En el apartado de [RESUMENES DE AGREGADOS](#resumenes-de-agregados), se muestran las funciones  `apply()` que permiten vectorizar operaciones sobre colecciones de objetos.
 
